# amakaflow-automation

./: .env.example  .gitignore  2026-02-19-ama-525-wearable-form-feedback-design.md  2026-02-19-ama-677-chaos-engine-design.md  2026-02-19-ama-677-chaos-engine-phase1-plan.md  2026-02-20-ama-525-wearable-form-feedback.md  2026-02-21-workout-import-qa-design.md  2026-02-21-workout-import-qa-plan.md  AGENTS.md  AMA-525-spike-findings.md  AMA-548-AUDIT.md  CLAUDE.md  README.md  SOUL.md  openclaw.chaos.json  openclaw.json  requirements-chaos.txt  requirements-qa.txt
.github/workflows/: auto-merge.yml  nightly-integration.yml  sentry-linear-sync.yml  workout-qa.yml
chaos/: orchestrator.py  run_nightly.sh
chaos/drivers/: garmin_emulator.py
chaos/judge/: rules.py
fixtures/: README.md  workout-qa-urls.json
prompts/: orchestration-agent.md
replay/: pyproject.toml
replay/amakaflow_replay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
replay/replay/: __init__.py  cli.py
replay/replay/analytics/: __init__.py  breakdown.py  health.py  trends.py  utils.py
replay/replay/capture/: __init__.py  middleware.py  session.py  writer.py
replay/replay/replay/: __init__.py
replay/replay/viewer/: __init__.py
replay/tests/test_capture/: test_middleware.py  test_session.py  test_writer.py
replay/tests/test_replay/: test_replay.py
scripts/: model-router.sh  run-full-suite.sh  run-qa-agent.sh  sentry_to_linear.py  sync-fixtures.sh  test_workout_import_qa.py  wait-for-services.sh  watch-and-test.sh  workout-url-harvester.py  workout_import_qa.py
(+57 files in other folders)
