[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amakaflow-replay"
version = "0.1.0"
description = "Workout Replay Test Harness for AmakaFlow"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "deepdiff>=6.0.0",
]

[project.scripts]
replay-cli = "replay.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
include = ["replay*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
